--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -31,7 +31,7 @@
 
 [[constraint]]
   name = "github.com/Preetam/rig"
-  branch = "cloud-native"
+  version = "v0.2.0"
 
 [[constraint]]
   name = "github.com/Preetam/siesta"
