--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
   build:
     docker:
-      - image: preetamjinka/ci:golang-2018-02
+      - image: preetamjinka/transverse-build-image:latest
     working_directory: /go/src/github.com/Preetam/transverse
     steps:
       - checkout
