--- a/web/package.json
+++ b/web/package.json
@@ -4,19 +4,20 @@
   "description": "Transverse",
   "scripts": {
     "test": "ospec",
-    "start": "webpack js/index.js static/js/app.min.js -d --watch",
-    "build": "webpack js/index.js static/js/app.min.js -p"
+    "start": "webpack --config webpack.dev.js --watch",
+    "build": "webpack --config webpack.prod.js"
   },
   "keywords": [],
   "repository": "gitlab.com/Preetam/transverse",
   "license": "UNLICENSED",
   "dependencies": {
-    "d3": "^4.10.0",
-    "mithril": "^1.1.3",
-    "moment": "^2.18.1",
-    "papaparse": "^4.3.5"
+    "d3": "^5.9.0",
+    "mithril": "^1.1.6",
+    "moment": "^2.24.0",
+    "papaparse": "^4.6.3"
   },
   "devDependencies": {
-    "webpack": "^2.6.1"
+    "webpack": "^4.29.3",
+    "webpack-cli": "^3.2.3"
   }
 }
