--- a/.github/actions/ansible/Dockerfile
+++ b/.github/actions/ansible/Dockerfile
@@ -2,7 +2,9 @@ FROM alpine
 
 ENV ANSIBLE_HOST_KEY_CHECKING=False
 
-RUN apk add ansible
+RUN apk add ansible py-pip
+RUN pip install boto3
+
 COPY entrypoint.sh /entrypoint.sh
 
 ENTRYPOINT ["/entrypoint.sh"]
