--- a/.github/actions/ansible/Dockerfile
+++ b/.github/actions/ansible/Dockerfile
@@ -3,7 +3,7 @@ FROM alpine
 ENV ANSIBLE_HOST_KEY_CHECKING=False
 
 RUN apk add ansible py-pip
-RUN pip install boto3
+RUN pip3 install boto3 botocore
 
 COPY entrypoint.sh /entrypoint.sh
 
