oh, pip was missing on the host

--- a/.github/actions/ansible/Dockerfile
+++ b/.github/actions/ansible/Dockerfile
@@ -2,9 +2,7 @@ FROM alpine
 
 ENV ANSIBLE_HOST_KEY_CHECKING=False
 
-RUN apk add ansible py-pip
-RUN pip3 install boto3 botocore
-
+RUN apk add ansible
 COPY entrypoint.sh /entrypoint.sh
 
 ENTRYPOINT ["/entrypoint.sh"]
