--- a/.github/actions/ansible/Dockerfile
+++ b/.github/actions/ansible/Dockerfile
@@ -2,7 +2,8 @@ FROM alpine
 
 ENV ANSIBLE_HOST_KEY_CHECKING=False
 
-RUN apk add ansible
+RUN apk add ansible gcc python3-dev libc-dev
+RUN pip install --upgrade paramiko
 COPY entrypoint.sh /entrypoint.sh
 
 ENTRYPOINT ["/entrypoint.sh"]
