--- a/.github/actions/ansible/Dockerfile
+++ b/.github/actions/ansible/Dockerfile
@@ -2,8 +2,8 @@ FROM alpine
 
 ENV ANSIBLE_HOST_KEY_CHECKING=False
 
-RUN apk add ansible gcc python3-dev libc-dev
-RUN pip install --upgrade paramiko
+RUN apk add ansible gcc python3-dev libc-dev libffi-dev openssl-dev
+RUN pip3 install --upgrade paramiko
 COPY entrypoint.sh /entrypoint.sh
 
 ENTRYPOINT ["/entrypoint.sh"]
