--- a/web/Makefile
+++ b/web/Makefile
@@ -1,7 +1,7 @@
 CSS_SRC := css/style.css
 
 static/css/style.min.css: $(CSS_SRC)
-	cleancss $(CSS_SRC) -o $@
+	cp $(CSS_SRC) $@
 
 all: static/css/style.min.css
 
