--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,6 +4,7 @@ name: Build and push
 jobs:
   buildAndPushImage:
     name: Build and Push Image
+    if: github.ref != 'master'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
