--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,11 +1,10 @@
 name: Branch build
 
 on:
-  push:
+  pull_request:
     branches:
-      - !master
+      - master
 
-name: Build and push
 jobs:
   buildAndPushImage:
     name: Build and Push Image
