add docker-compose.yml, cleanup

--- a/.github/workflows/master_build_and_deploy.yml
+++ b/.github/workflows/master_build_and_deploy.yml
@@ -1,13 +1,12 @@
-name: Branch build
+name: Master build and deploy
 
 on:
-  pull_request:
+  push:
     branches:
       - master
 
 jobs:
-  buildAndPushImage:
-    name: Build and Push Image
+  build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
@@ -26,3 +25,10 @@ jobs:
         uses: actions/docker/cli@86ff551d26008267bb89ac11198ba7f1d807b699
         with:
           args: "push preetamjinka/transverse:$GITHUB_SHA"
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v1
+    - uses: ./.github/actions/ansible
+      env:
+        VAULT_PASS: ${{ secrets.VAULT_PASS }}
