--- a/.github/workflows/master_build_and_deploy.yml
+++ b/.github/workflows/master_build_and_deploy.yml
@@ -27,6 +27,7 @@ jobs:
           args: "push preetamjinka/transverse:$GITHUB_SHA"
   deploy:
     runs-on: ubuntu-latest
+    needs: build
     steps:
     - uses: actions/checkout@v1
     - uses: ./.github/actions/ansible
