--- a/.github/workflows/pr_build.yml
+++ b/.github/workflows/pr_build.yml
@@ -12,17 +12,11 @@ jobs:
     steps:
       - uses: actions/checkout@master
       - name: Docker login
-        uses: actions/docker/login@master
+        run: "docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD"
         env:
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-        with:
-          args: DOCKER_USERNAME DOCKER_PASSWORD
       - name: Docker build
-        uses: actions/docker/cli@86ff551d26008267bb89ac11198ba7f1d807b699
-        with:
-          args: "build -t preetamjinka/transverse:$GITHUB_SHA ."
+        run: "docker build -t preetamjinka/transverse:$GITHUB_SHA ."
       - name: Push image to Docker Hub
-        uses: actions/docker/cli@86ff551d26008267bb89ac11198ba7f1d807b699
-        with:
-          args: "push preetamjinka/transverse:$GITHUB_SHA"
+        run: "docker push preetamjinka/transverse:$GITHUB_SHA"
