--- a/ui/package.json
+++ b/ui/package.json
@@ -4,20 +4,46 @@
   "description": "Transverse",
   "scripts": {
     "test": "ospec",
-    "start": "webpack --config webpack.dev.js --watch",
-    "build": "webpack --config webpack.prod.js"
+    "start": "webpack-dev-server",
+    "build": "webpack"
   },
   "keywords": [],
   "repository": "gitlab.com/Preetam/transverse",
   "license": "UNLICENSED",
   "dependencies": {
-    "d3": "^5.9.0",
+    "@types/styled-theming": "^2.2.2",
+    "axios": "^0.19.0",
+    "d3": "^5.12.0",
     "mithril": "^2.0.4",
     "moment": "^2.24.0",
-    "papaparse": "^4.6.3"
+    "papaparse": "^5.1.0",
+    "react": "^16.11.0",
+    "react-dom": "^16.11.0",
+    "react-router-dom": "^5.1.2",
+    "styled-components": "^4.4.0",
+    "styled-theming": "^2.2.0"
   },
   "devDependencies": {
-    "webpack": "^4.29.3",
-    "webpack-cli": "^3.2.3"
+    "@babel/cli": "^7.6.4",
+    "@babel/core": "^7.6.4",
+    "@babel/preset-env": "^7.6.3",
+    "@babel/preset-typescript": "^7.6.0",
+    "@types/react": "^16.9.11",
+    "@types/react-dom": "^16.9.3",
+    "@types/react-router-dom": "^5.1.0",
+    "@types/styled-components": "^4.1.19",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^3.2.0",
+    "html-webpack-plugin": "^3.2.0",
+    "prettier": "^1.18.2",
+    "pretty-quick": "^2.0.0",
+    "style-loader": "^1.0.0",
+    "terser-webpack-plugin": "^2.2.1",
+    "ts-loader": "^6.2.1",
+    "typescript": "^3.6.4",
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.9",
+    "webpack-dev-server": "^3.9.0"
   }
 }
