--- a/ui/package.json
+++ b/ui/package.json
@@ -14,6 +14,7 @@
     "@types/styled-theming": "^2.2.2",
     "axios": "^0.19.0",
     "d3": "^5.12.0",
+    "framer-motion": "^1.6.15",
     "mithril": "^2.0.4",
     "moment": "^2.24.0",
     "papaparse": "^5.1.0",
