--- a/.deepsource.toml
+++ b/.deepsource.toml
@@ -1,5 +1,13 @@
 version = 1
 
+test_patterns = [
+  "**/*_test.go"
+]
+
 [[analyzers]]
 name = "go"
 enabled = true
+
+  [analyzers.meta]
+  import_path = "github.com/Preetam/transverse"
+  dependencies_vendored = true
