--- a/ui/package.json
+++ b/ui/package.json
@@ -5,43 +5,46 @@
   "scripts": {
     "test": "ospec",
     "start": "webpack-dev-server",
-    "build": "webpack"
+    "build": "webpack",
+    "pretty": "prettier --config .prettierrc.yaml --write './src/**/*.tsx'"
   },
   "keywords": [],
   "repository": "gitlab.com/Preetam/transverse",
   "license": "UNLICENSED",
   "dependencies": {
     "axios": "^0.19.0",
-    "d3": "^5.12.0",
-    "framer-motion": "^1.6.15",
+    "d3": "^5.14.2",
+    "framer-motion": "^1.7.0",
     "moment": "^2.24.0",
     "papaparse": "^5.1.0",
-    "react": "^16.11.0",
-    "react-dom": "^16.11.0",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
     "styled-components": "^4.4.1",
+    "styled-system": "^5.1.4",
     "styled-theming": "^2.2.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.7.0",
-    "@babel/core": "^7.7.2",
-    "@babel/preset-env": "^7.7.1",
-    "@babel/preset-typescript": "^7.7.2",
-    "@types/react": "^16.9.11",
+    "@babel/cli": "^7.7.5",
+    "@babel/core": "^7.7.5",
+    "@babel/preset-env": "^7.7.6",
+    "@babel/preset-typescript": "^7.7.4",
+    "@types/react": "^16.9.16",
     "@types/react-dom": "^16.9.4",
-    "@types/react-router-dom": "^5.1.2",
-    "@types/styled-components": "^4.1.21",
+    "@types/react-router-dom": "^5.1.3",
+    "@types/styled-components": "^4.4.1",
+    "@types/styled-system": "^5.1.4",
     "@types/styled-theming": "^2.2.2",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "clean-webpack-plugin": "^3.0.0",
-    "css-loader": "^3.2.0",
+    "css-loader": "^3.3.2",
     "html-webpack-plugin": "^3.2.0",
-    "prettier": "^1.18.2",
+    "prettier": "^1.19.1",
     "pretty-quick": "^2.0.1",
-    "style-loader": "^1.0.0",
-    "terser-webpack-plugin": "^2.2.1",
+    "style-loader": "^1.0.1",
+    "terser-webpack-plugin": "^2.3.0",
     "ts-loader": "^6.2.1",
-    "typescript": "^3.7.2",
+    "typescript": "^3.7.3",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.9.0"
